--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,28 @@ body {
   font-family: 'Merriweather', serif;
 }
 
+hr {
+  border-style: none;
+  border-top-style: dotted;
+  border-width: 8px;
+  width: 5%;
+  margin-top: 50px;
+  border-color: #EAF6F6;
+}
 .topcontainer {
   background-color: #e4f9f5;
   position: relative;
   padding-top: 100px;
+  height: 350px;
+}
+
+.middle-container {
+  margin: 50px 0;
+}
+
+.bottom-container {
+  background-color: #66BFBF;
+  padding: 50px 0 20px;
 }
 
 h1 {
@@ -22,6 +40,7 @@ h2 {
   font-size: 2.5rem;
   color: #66BFBF;
   font-weight: normal;
+  padding-bottom: 10px;
 }
 
 h3 {
@@ -29,30 +48,42 @@ h3 {
   color: #11999E;
 }
 
-.middlecontainer {}
+a {
+color: #11999E;
+font-family: 'Montserrat', sans-serif;
+margin: 10px 20px;
+text-decoration: none;
+}
 
-.bottomcontainer {}
+a:hover {
+  color: #EAF6F6;
+}
+
+p {
+  line-height: 2;
+}
 
 .skill-row {
   width: 50%;
-  margin: 100px auto 100px auto;
+  margin: 70px auto 70px auto;
   text-align: left;
-  line-height: 2;
-}
-.footer-link {
-  color: #11999E;
 }
 
 .top-cloud {
   position: absolute;
-  top: 50px;
-  right: 300px;
+  top: 40px;
+  right: 400px;
 }
 
+.middle-cloud {
+  position: absolute;
+  top: 350px;
+  right: 150px;
+}
 .bottom-cloud {
   position: absolute;
-  left: 300px;
-  bottom: 300px;
+  left: 100px;
+  top: 300px;
 }
 
 .code-img {
@@ -64,5 +95,43 @@ h3 {
 .game-img {
   width: 20%;
   float: right;
-  margin-right: 30px;
+}
+
+.outro {
+  width: 40%;
+  margin: 40px auto;
+}
+
+.footer-txt {
+  color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 10px 0;
+}
+
+
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
 }
